--- a/package.json
+++ b/package.json
@@ -10,13 +10,29 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11",
+    "@emotion/server": "^11",
+    "@emotion/styled": "^11",
+    "@hookform/resolvers": "^3.3.1",
     "@remix-run/css-bundle": "^2.0.1",
     "@remix-run/node": "^2.0.1",
     "@remix-run/react": "^2.0.1",
     "@remix-run/serve": "^2.0.1",
+    "@supabase/auth-helpers-remix": "^0.2.2",
+    "@supabase/auth-ui-react": "^0.4.5",
+    "@supabase/auth-ui-shared": "^0.1.7",
+    "@supabase/supabase-js": "^2.36.0",
+    "framer-motion": "^6",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
+    "react-hook-form-chakra": "^1.0.1",
+    "react-type-animation": "^3.1.0",
+    "supabase": "^1.99.5",
+    "yup": "^1.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.0.1",
