--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/auth-ui-react": "^0.4.5",
     "@supabase/auth-ui-shared": "^0.1.7",
     "@supabase/supabase-js": "^2.36.0",
+    "core-js": "^3.33.1",
     "framer-motion": "^6",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
