--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form-chakra": "^1.0.1",
     "react-type-animation": "^3.1.0",
     "supabase": "^1.99.5",
+    "twilio": "^4.20.0",
     "yup": "^1.3.1"
   },
   "devDependencies": {
